--- a/src/assets/scss/default/_variables.scss
+++ b/src/assets/scss/default/_variables.scss
@@ -1,37 +1,37 @@
 /*-- Variables --*/
 :root {
     //Themes colors
-    --color-primary: #c6220f;
-    --color-primary-rgba: rgb(5, 157, 255);
-    --color-primary-alt: #059DFF;
-    --color-primary-light: #059DFF;
-    --color-primary-lightest: #059DFF;
-    --color-secondary: #e11717;
-    --color-tertiary: #d73333;
-    --color-tertiary-alt: #fcfcfc;
-    --color-pink: #c12020;
-    --color-light-green: #36C6F0;
+    --color-primary: #ffffff;
+    --color-primary-rgba: rgb(172, 172, 172);
+    --color-primary-alt: #ffffffe3;
+    --color-primary-light: #ffffffe3;
+    --color-primary-lightest: #ffffffe3;
+    --color-secondary: #ffffffe3;
+    --color-tertiary: #ffffffe3;
+    --color-tertiary-alt: #7e7e7e;
+    --color-pink: #ffffff;
+    --color-light-green: #ffffff;
     --color-primary-darker: #ffffff;
-    --color-tertiary-darker: #150b40;
-    --color-secondary-darker: #190301;
-    --color-light-green-darker: #001f27;
-    --color-pink-darker: #2f011d;
+    --color-tertiary-darker: #ffffff;
+    --color-secondary-darker: #ffffff;
+    --color-light-green-darker: #ffffff;
+    --color-pink-darker: #ffffff;
     
     // Typo Color 
-    --color-heading: #ffffff;
-    --color-body: #acacac;
+    --color-heading: #0a0909;
+    --color-body: #717171dc;
 
-    --color-dark: #060606;
+    --color-dark: #ffffff;
     --color-darker: rgba(6, 6, 6, 0.7);
     --color-darkest: rgba(0, 0, 0, 0.3);
 
     --color-black: #000000;
-    --color-blacker: rgba(15, 15, 17, 0);
-    --color-blackest: #0f0f11;
+    --color-blacker: rgb(0, 0, 0);
+    --color-blackest: #000000;
     --color-border: hsla(0, 0%, 100%, 0.1);
 
 
-    --color-lessdark: #1e1e1e;
+    --color-lessdark: #000000eb;
 
 
 
@@ -42,7 +42,7 @@
     --color-midgray: #878787;
     --color-light: #E4E6EA;
     --color-lighter: #CED0D4;
-    --color-lightest: #F0F2F5;
+    --color-lightest: #fe0000;
 
     --color-white: #ffffff;
     
@@ -56,7 +56,7 @@
 
 
     //Social icon colors
-    --color-facebook: #3B5997;
+    --color-facebook: #ffffff;
     --color-twitter: #1BA1F2;
     --color-youtube: #ED4141;
     --color-linkedin: #0077B5;
@@ -71,7 +71,7 @@
     --color-extra01: #666666;
     --color-extra02: #606770;
     --color-extra03: #FBFBFD;
-    --color-extra04: #1A1A1A;
+    --color-extra04: #f76363;
     --color-extra05: #242424;
     
     //Border-radius
