--- a/src/assets/scss/elements/_advancepricing.scss
+++ b/src/assets/scss/elements/_advancepricing.scss
@@ -20,7 +20,7 @@
                 font-size: 60px;
                 text-align: center;
                 display: block;
-                color: var(--color-white);
+                color: var(--color-lightest);
                 font-weight: 700;
                 sup {
                     font-size: 16px;
