--- a/src/assets/scss/elements/_button.scss
+++ b/src/assets/scss/elements/_button.scss
@@ -20,9 +20,9 @@ button {
         border-color: transparent;
         border-radius: 8px;
         background-color: transparent;
-        background: linear-gradient(95deg, var(--color-primary) 15%, var(--color-tertiary) 45%, var(--color-pink) 75%, var(--color-secondary) 100%) 95% / 200% 100%;
+        background: linear-gradient(95deg, var(--color-primary) 15%, var(--color-tertiary) 45%, var(--color-pink) 75%, var(--color-primary) 100%) 95% / 200% 100%;
         transition-duration: 300ms;
-        color: var(--color-white);
+        color: var(--color-black);
         font-size: 16px;
         font-weight: 400;
         text-align: center;
@@ -32,9 +32,7 @@ button {
         height: 50px;
         line-height: 47px;
         letter-spacing: 0.5px;
-        width: auto;
-
-        
+        width: auto;        
 
         &.btn-icon {
             .icon {
@@ -48,10 +46,10 @@ button {
             }
         }
         &:hover {
-            box-shadow: var(--shadow-primary);
+            box-shadow: var(--shadow-light);
             -webkit-filter: brightness(125%);
             filter: brightness(125%);
-            color: var(--color-white);
+            color: var(--color-black);
             text-decoration: none;
         }
         &.btn-small {
