--- a/src/assets/scss/footer/_copyright.scss
+++ b/src/assets/scss/footer/_copyright.scss
@@ -24,7 +24,7 @@
 
 // Copyright Style One 
 .copyright-style-one {
-    background: var(--color-darkest);
+    background: var(--color-blackest);
     padding: 20px 0;
     border-top: 1px solid var(--color-border);
     .copyright-text {
@@ -58,7 +58,7 @@
                 }
             }
             a {
-                font-size: 14px;
+                font-size: 15px;
             }
         }
     }
