--- a/src/assets/scss/header/_mobilemenu.scss
+++ b/src/assets/scss/header/_mobilemenu.scss
@@ -12,7 +12,7 @@
     bottom: 0;
     left: 0;
     right: 0;
-    background-color: rgba(0, 0, 0, 0.8);
+    background-color: rgb(0, 0, 0);
     visibility: hidden;
     opacity: 0;
     transition: opacity .5s ease-out;
